# sherlock-cogs

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  scripts.py
cog_ingester/: api.py  cog.py  config.py  main.py  schema.py  stac.py  storage.py  timer.py  utils.py
tests/: test_cog_ingester.py
